<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:id="@+id/bar_01"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/filebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title1"
            android:textColor="#23238E"
            android:textSize="20sp"
            android:textStyle="bold"/>"
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bar_02"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/picturebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title2"
            android:textColor="#855E42"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bar_03"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/musicbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title3"
            android:textColor="#855E42"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bar_04"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/videobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title4"
            android:textColor="#855E42"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bar_05"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/appbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title5"
            android:textColor="#855E42"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
</LinearLayout>
